argocd/image-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-image-updater
  template:
    metadata:
      labels:
        app: argocd-image-updater
    spec:
      serviceAccountName: argocd-image-updater
      containers:
        - name: argocd-image-updater
          image: quay.io/argoprojlabs/argocd-image-updater:v0.12.2
          imagePullPolicy: IfNotPresent
          args:
            - run
            - --interval=30s
            - --once=false
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          configMap:
            name: argocd-image-updater-config
